# chromium-bidi

./: .bandit  .browser  .eslintignore  .eslintplugin.js  .eslintrc.cjs  .eslintrc.js  .flake8  .gitignore  .gn  .mailmap  .mocharc.cjs  .mocharc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.cjs  .release-please-manifest.json  .style.yapf  BUILD.gn  CHANGELOG.md  CONTRIBUTING.md  DEPS  GEMINI.md  LICENSE  Pipfile  README.md  SECURITY.md  benchmark.md  codecov.yml  esbuild.mjs  eslint.config.mjs  index.html  install-browser.mjs  jxjdjdj  mapper.html  package-lock.json  package.json  prettier.config.cjs  pyproject.toml  pytest.ini  release-please-config.json  (+8 more)
build_overrides/: BUILDCONFIG.gn  build.gni
src/: BUILD.gn  bidiMapperSession.js  bidiServer.js  bidiServerRunner.ts  browserLauncher.js  browserLauncher.ts  iServer.ts  index.ts  mapperReader.js  mapperReader.ts  mapperServer.ts  server.js  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.mapper.json  tsconfig.server.json
src/bidiMapper/: BidiMapper.ts  BidiNoOpParser.ts  BidiParser.ts  BidiServer.ts  BidiTransport.ts  CdpConnection.ts  CommandProcessor.ts  MapperOptions.ts  OutgoindBidiMessage.ts  OutgoingBidiMessage.ts  OutgoingMessage.ts  bibiProtocolTypes.ts  bidiClient.js  bidiCommandsProcessor.js  bidiMapper.js  bidiMapper.ts  bidiProtocolTypes.ts  bidiServer.ts  cdp.ts  cdpClient.js  commandProcessor.ts  log.js  log.ts  logger.js  mapper.js  mapper.ts  rollup.config.js  scripts.d.ts  tsconfig.cjs.json  tsconfig.json
src/bidiMapper/domains/: browsingContext.ts
src/bidiMapper/domains/browser/: BrowserProcessor.ts
src/bidiMapper/domains/cdp/: CdpProcessor.ts
src/bidiMapper/domains/context/: BrowsingContextImpl.ts  BrowsingContextProcessor.ts  BrowsingContextStorage.spec.ts  BrowsingContextStorage.ts  CdpTarget.ts  IContext.ts  PreloadScriptIdStorage.spec.ts  PreloadScriptIdStorage.ts  PreloadScriptStorage.spec.ts  PreloadScriptStorage.ts  bidiPreloadScript.ts  browsingContextImpl.ts  browsingContextProcessor.spec.ts  browsingContextProcessor.ts  browsingContextStorage.spec.ts  browsingContextStorage.ts  cdpTarget.ts  context.ts  contextImpl.ts  frameContext.ts  iContext.ts  logHelper.spec.ts  logHelper.ts  logManager.ts  scriptEvaluator.ts  serializer.ts  targetContext.ts  targetInfo.ts
src/bidiMapper/domains/events/: EventManager.ts  SubscriptionManager.spec.ts  SubscriptionManager.ts
src/bidiMapper/domains/input/: ActionDispatcher.ts  ActionOption.ts  InputProcessor.ts  InputSource.ts  InputState.ts  InputStateManager.ts  USKeyboardLayout.ts  keyUtils.ts
src/bidiMapper/domains/log/: LogManager.ts  logHelper.spec.ts  logHelper.ts  logHelper_getRemoteValuesText.spec.ts  logHelper_logMessageFormatter.spec.ts  logManager.ts
src/bidiMapper/domains/network/: Cookie.ts  NetworkManager.ts  NetworkModuleMocks.spec.ts  NetworkProcessor.spec.ts  NetworkProcessor.ts  NetworkRequest.ts  NetworkStorage.spec.ts  NetworkStorage.ts  NetworkUtils.spec.ts  NetworkUtils.ts  networkProcessor.ts  networkRequest.ts
src/bidiMapper/domains/permissions/: PermissionsProcessor.ts
src/bidiMapper/domains/protocol/: bidiProtocolTypes.ts  error.ts
src/bidiMapper/domains/script/: ChannelProxy.ts  DedicatedWorkerRealm.ts  PreloadScript.ts  PreloadScriptStorage.spec.ts  PreloadScriptStorage.ts  Realm.ts  RealmStorage.ts  ScriptProcessor.ts  SharedId.spec.ts  SharedId.ts  SharedIdParser.spec.ts  SharedIdParser.ts  WindowRealm.ts  bidiPreloadScript.ts  channelProxy.ts  realm.ts  realmStorage.ts  scriptEvaluator.ts
src/bidiMapper/domains/session/: EventManager.ts  SessionProcessor.ts  SubscriptionManager.spec.ts  SubscriptionManager.ts
src/bidiMapper/scripts/: eval.es  eval.spec.ts  eval.ts  eval.txt  rollup.config.js  tsconfig.json  tsconfig.scripts.json
src/bidiMapper/utils/: bidiServer.ts  cdpClient.ts  cdpServer.spec.ts  cdpServer.ts  deferred.ts  iServer.ts  log.ts  mapperPageSource.ts  mapperTabPage.ts  typeHelper.ts
src/bidiServer/: BrowserInstance.ts  BrowserManager.ts  MapperCdpConnection.ts  MapperRunner.ts  MapperServer.ts  PipeTransport.ts  Session.ts  SessionManager.ts  SimpleTransport.ts  WebSocketServer.ts  bidiServerRunner.ts  index.ts  mapperReader.ts  mapperServer.ts  reader.ts  tsconfig.cjs.json  tsconfig.json
src/bidiTab/: BidiParser.ts  BidiParserImpl.ts  Transport.ts  bidiTab.ts  logger.ts  mapperTabPage.ts  tsconfig.cjs.json  tsconfig.json
src/cdp/: CdpClient.spec.ts  CdpClient.test.ts  CdpClient.ts  CdpConnection.spec.ts  CdpConnection.test.ts  CdpConnection.ts  CdpError.ts  cdp.ts  cdpClient.spec.ts  cdpClient.ts  cdpConnection.spec.ts  cdpConnection.ts  cdpMessage.ts  connection.spec.ts  connection.ts  index.ts  message.ts  router.spec.ts  router.ts  stubTransport.spec.ts  transport.ts  tsconfig.cjs.json  tsconfig.json  websocketTransport.ts
src/configs/: tsconfig.common.json
src/extension/: manifest.json
src/node/: browserFetcher.ts  install.ts
src/protocol/: EmulatedCdpMapping.ts  ErrorResponse.spec.ts  ErrorResponse.test.ts  ErrorResponse.ts  cddlLocal.ts  cddlRemote.ts  cdp.ts  chromium-bidi.ts  error.ts  event.ts  protocol.spec.ts  protocol.ts  tsconfig.cjs.json  tsconfig.json  types.ts  webdriver-bidi.ts
src/protocol-parser/: protocol-parser.ts  tsconfig.cjs.json  tsconfig.json  webdriver-bidi.ts
src/tests/: stubServer.spec.ts  stubTransport.spec.ts
src/utils/: Base64.spec.ts  Base64.ts  Buffer.spec.ts  Buffer.test.ts  Buffer.ts  DefaultMap.spec.ts  DefaultMap.test.ts  DefaultMap.ts  Deferred.spec.ts  Deferred.test.ts  Deferred.ts  DistinctValues.spec.ts  DistinctValues.ts  EventEmitter.spec.ts  EventEmitter.test.ts  EventEmitter.ts  GraphemeTools.spec.ts  GraphemeTools.ts  IdWrapper.spec.ts  IdWrapper.test.ts  Mutex.spec.ts  Mutex.test.ts  Mutex.ts  PipeTransport.ts  ProcessingQueue.spec.ts  ProcessingQueue.test.ts  ProcessingQueue.ts  Time.spec.ts  UrlHelpers.spec.ts  UrlHelpers.ts  UrlPattern-browser.ts  UrlPattern.spec.ts  UrlPattern.ts  WebsocketTransport.ts  assert.spec.ts  assert.test.ts  assert.ts  base64.spec.ts  base64.test.ts  buffer.spec.ts  (+34 more)
(+1264 files in other folders)
